--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <div class="kartu-profil">
-  <img src="foto-profil.img" alt="Foto profil saya">
+  <img src="hiu.jpg" alt="Foto profil saya">
   <button id="sapaButton">Sapa Saya!</button>
 </div>
   </h1>Damar Arya Gunanta</h1>
