--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </div>
   </h1>Damar Arya Gunanta</h1>
   </p>Siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya!</p>
-  <a>
-  href="https://www.instagram.com/damar_a.g">Kunjungi Instagram Saya</a>
+  <a href="https://www.instagram.com/damar_a.g">Kunjungi Instagram Saya</a>
   
 </body>
 </html>
