--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   <div class="kartu-profil">
   <img src="hiu.jpg" alt="Foto profil saya">
   <button id="sapaButton">Sapa Saya!</button>
-</div>
   </h1>Damar Arya Gunanta</h1>
   </p>Siswa SMA yang tertarik dengan teknologi dan desain. Selamat datang di website pertama saya!</p>
   <a href="https://www.instagram.com/damar_a.g">Kunjungi Instagram Saya</a>
-  
+  </div>
+  <script src="script.js"
 </body>
 </html>
